Refactor the design

--- a/home.html
+++ b/home.html
@@ -11,8 +11,11 @@
   <body>
     <div class="left">Hello,</div>
     <div class="right">
-      <article>I'm Jingying Huang</article>
       <span class="iconify" data-icon="gg:menu-right"> </span>
+      <section>
+        <img src="assets/cartoon_pic.png" alt="My Profile Picture" />
+        <article>I'm Jingying Huang</article>
+      </section>
     </div>
   </body>
 </html>
