Complete UI of hoome page

--- a/home.html
+++ b/home.html
@@ -12,10 +12,10 @@
     <div class="left">Hello,</div>
     <div class="right">
       <span class="iconify" data-icon="gg:menu-right"> </span>
-      <section>
+      <figure>
         <img src="assets/cartoon_pic.png" alt="My Profile Picture" />
-        <article>I'm Jingying Huang</article>
-      </section>
+        <figcaption>I'm Jingying Huang</figcaption>
+      </figure>
     </div>
   </body>
 </html>
