--- a/home.html
+++ b/home.html
@@ -11,11 +11,23 @@
   <body>
     <div class="left">Hello,</div>
     <div class="right">
-      <span class="iconify" data-icon="gg:menu-right"> </span>
+      <span class="iconify" data-icon="gg:menu-right">
+        <ul>
+          <li>About</li>
+          <li>Interests</li>
+          <li>Projects</li>
+        </ul>
+      </span>
       <figure>
-        <img src="assets/cartoon_pic.png" alt="My Profile Picture" />
+        <img src="assets/profile.png" alt="My Profile Picture" />
         <figcaption>I'm Jingying Huang</figcaption>
       </figure>
+      <h1>
+        A Seeker's<br />
+        Journey <br />
+        to the<br />
+        Meaning of Life
+      </h1>
     </div>
   </body>
 </html>
